--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - PUID=1005
       - PGID=100
+      - HOME=/tmp
       - FLASK_ENV=development
       - PYTHONUNBUFFERED=1
       - TZ=Asia/Shanghai
