--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.defaultInterpreterPath": ".venv\\Scripts\\python.exe",
     "python.terminal.activateEnvironment": true,
-    "python.selectInterpreter": ".venv\\Scripts\\python.exe"
+    "python.selectInterpreter": ".venv\\Scripts\\python.exe",
+    "python-envs.pythonProjects": []
 }
